--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,18 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-java-8.0.23.jar=D:\\Java projects\\lib\\mysql-connector-java-8.0.23\\mysql-connector-java-8.0.23.jar
+file.reference.poi-5.0.0.jar=D:\\Java projects\\poi-5.0.0\\poi-5.0.0.jar
+file.reference.poi-ooxml-5.0.0.jar=D:\\Java projects\\poi-5.0.0\\poi-ooxml-5.0.0.jar
+file.reference.poi-ooxml-full-5.0.0.jar=D:\\Java projects\\poi-5.0.0\\poi-ooxml-full-5.0.0.jar
+file.reference.poi-ooxml-lite-5.0.0.jar=D:\\Java projects\\poi-5.0.0\\poi-ooxml-lite-5.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.23.jar}
+    ${file.reference.mysql-connector-java-8.0.23.jar}:\
+    ${file.reference.poi-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-full-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-lite-5.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
